# fraud-aml-realtime

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: README.md
docs/: deploy.md  eda.md  fraud_baseline.md  graph_aml.md  model_card.md  serving.md  split.md  streaming.md
feast_repo/: definitions.py  feature_store.yaml
infra/: compose.stream.yaml  compose.yaml  prometheus.yml
infra/docker/: Dockerfile
loadtest/: locustfile.py
notebooks/: 01_eda_ieee.ipynb
requirements/: project2_fraud_aml.txt
src/fraud_aml/: config.py  eda.py  logging_config.py  seeds.py
src/fraud_aml/data/: download.py  loaders.py  split.py
src/fraud_aml/decision/: __init__.py
src/fraud_aml/features/: build.py  encoding.py
src/fraud_aml/fraud_model/: dataset.py  export_model.py  metrics.py  train.py
src/fraud_aml/graph_aml/: baseline.py  data.py  explain.py  gnn.py  metrics.py  split.py  train.py
src/fraud_aml/serving/: app.py  metrics.py  model_loader.py  rules.py  schemas.py  scoring.py
src/fraud_aml/streaming/: features.py  online_store.py  processor.py  producer.py  schema.py
tests/: conftest.py  test_config.py  test_decision.py  test_decision_combine.py  test_encoding.py  test_features.py  test_fraud_metrics.py  test_fraud_train.py  test_gnn_forward.py  test_graph_build.py  test_graph_metrics.py  test_graph_split.py  test_healthz.py  test_no_skew_serving.py  test_processor_bytewax.py  test_producer_order.py  test_rules.py  test_score_contract.py  test_scoring_service.py  test_seeds.py  test_split.py  test_stream_features.py
