[project]
name = "fraud-aml"
version = "0.1.0"
description = "Real-time fraud scoring and graph-based AML (GNN) as a service."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "dataeclipse" }]

# Light core: needed by the service skeleton and config. Installed by `uv sync`.
dependencies = [
    "pydantic>=2.11",
    "pydantic-settings>=2.6",
    "structlog>=24.4",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "prometheus-client>=0.21",
]

# Extras (floor pins from requirements/project2_fraud_aml.txt):
#   data   - light data/EDA layer (Phase 1): polars/pandas/sklearn/pyarrow/kaggle. CI installs this.
#   tabular - tabular fraud (lightgbm/xgboost/shap/mlflow), no torch. Used by Phase 1 and fraud CI.
#   graph   - GNN (torch/torch-geometric/networkx). Used by Phase 4.
#   ml      - convenience union of tabular + graph.
#   stream  - streaming and online features (kafka/bytewax/feast/redis).
#   serve   - lean Docker runtime for the fraud scorer (no torch/mlflow).
[project.optional-dependencies]
data = [
    # <2.5: numba (via shap, extra tabular) does not support numpy 2.5 yet.
    "numpy>=2.4,<2.5",
    "pandas>=2.2",
    "polars>=1.0",
    "pyarrow>=17.0",
    "scikit-learn>=1.8.0",
    "kaggle>=1.6,<1.7",
    "python-dotenv>=1.0",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "ipykernel>=6.29",
    "nbconvert>=7.16",
]
tabular = [
    "fraud-aml[data]",
    "lightgbm>=4.6.0",
    "xgboost>=3.2.0",
    "imbalanced-learn>=0.13",
    "shap>=0.46",
    "mlflow>=2.18",
    "evidently>=0.5",
]
# torch from PyPI (CPU) for a reproducible lock; install the GPU/CUDA build from the
# PyTorch index (see README). torch-geometric resolves AFTER torch.
graph = [
    "fraud-aml[data]",
    "torch>=2.12.0",
    "torch-geometric>=2.8.0",
    "networkx>=3.4",
]
ml = ["fraud-aml[tabular]", "fraud-aml[graph]"]
stream = [
    "confluent-kafka>=2.6",
    "bytewax>=0.21",
    "feast>=0.40",
    "redis>=5.2",
]
serve = [
    "numpy>=2.4,<2.5",
    "pandas>=2.2",
    "scikit-learn>=1.8.0",
    "lightgbm>=4.6.0",
]
loadtest = ["locust>=2.31"]

[project.scripts]
fraud-aml-ingest = "fraud_aml.data.download:main"
fraud-aml-eda = "fraud_aml.eda:main"
fraud-aml-fraud-baseline = "fraud_aml.fraud_model.train:main"

[dependency-groups]
dev = [
    "ruff>=0.7",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "pre-commit>=4.0",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fraud_aml"]

# --- Code quality ---
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"notebooks/**" = ["E501"]

# FastAPI Depends/Query/... in argument defaults is a framework pattern, not a bug (B008).
[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Path", "fastapi.Body"]

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
files = ["src"]

# Libraries without type stubs - do not break strict on their imports.
[[tool.mypy.overrides]]
module = [
    "sklearn.*",
    "kaggle.*",
    "dotenv.*",
    "structlog.*",
    "lightgbm.*",
    "xgboost.*",
    "torch.*",
    "torch_geometric.*",
    "networkx.*",
    "mlflow.*",
    "evidently.*",
    "shap.*",
    "imblearn.*",
    "confluent_kafka.*",
    "bytewax.*",
    "feast.*",
    "redis.*",
    "locust.*",
    "matplotlib.*",
    "seaborn.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pandas", "pandas.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=fraud_aml --cov-report=term-missing"
markers = [
    "fraud: tabular fraud model tests (LightGBM, IEEE-CIS)",
    "graph: graph AML tests (GNN, torch-geometric, Elliptic)",
    "stream: streaming tests (kafka/bytewax/feast/redis)",
]

[tool.coverage.run]
source = ["fraud_aml"]
branch = true
